// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignmentGradeFilter Component snapshots buttons and groups disabled if no selected assignment 1`] = `
<React.Fragment>
  <Row
    noGutters={false}
  >
    <Col
      className="pr-0"
      xs={5}
    >
      <PercentGroup
        disabled={true}
        id="assignmentGradeMin"
        label={
          <FormattedMessage
            defaultMessage="Min Grade"
            description="Min-grade filter select label in Gradebook Filters"
            id="gradebook.GradebookFilters.minGradeFilterLabel"
          />
        }
        onChange={[MockFunction handleSetMin]}
        value="2"
      />
    </Col>
    <Col
      className="pr-0"
      xs={5}
    >
      <PercentGroup
        disabled={true}
        id="assignmentGradeMax"
        label={
          <FormattedMessage
            defaultMessage="Max Grade"
            description="Max-grade filter select label in Gradebook Filters"
            id="gradebook.GradebookFilters.maxGradeFilterLabel"
          />
        }
        onChange={[MockFunction handleSetMax]}
        value="98"
      />
    </Col>
  </Row>
  <ActionRow
    as="div"
    isStacked={false}
  >
    <ForwardRef
      active={false}
      disabled={true}
      name="assignmentGradeMinMax"
      onClick={[MockFunction handleSubmit]}
      type="submit"
      variant="outline-secondary"
    >
      Apply
    </ForwardRef>
  </ActionRow>
</React.Fragment>
`;

exports[`AssignmentGradeFilter Component snapshots smoke test 1`] = `
<React.Fragment>
  <Row
    noGutters={false}
  >
    <Col
      className="pr-0"
      xs={5}
    >
      <PercentGroup
        disabled={false}
        id="assignmentGradeMin"
        label={
          <FormattedMessage
            defaultMessage="Min Grade"
            description="Min-grade filter select label in Gradebook Filters"
            id="gradebook.GradebookFilters.minGradeFilterLabel"
          />
        }
        onChange={[MockFunction handleSetMin]}
        value="2"
      />
    </Col>
    <Col
      className="pr-0"
      xs={5}
    >
      <PercentGroup
        disabled={false}
        id="assignmentGradeMax"
        label={
          <FormattedMessage
            defaultMessage="Max Grade"
            description="Max-grade filter select label in Gradebook Filters"
            id="gradebook.GradebookFilters.maxGradeFilterLabel"
          />
        }
        onChange={[MockFunction handleSetMax]}
        value="98"
      />
    </Col>
  </Row>
  <ActionRow
    as="div"
    isStacked={false}
  >
    <ForwardRef
      active={false}
      disabled={false}
      name="assignmentGradeMinMax"
      onClick={[MockFunction handleSubmit]}
      type="submit"
      variant="outline-secondary"
    >
      Apply
    </ForwardRef>
  </ActionRow>
</React.Fragment>
`;
